--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,61 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2021-04-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2841788'>Remove unnecessary constructor of CreditCard</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2834056'>Convert enum to enum class for FrameSizeButtonDelegate::Animate</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2827552'>Convert enum to enum class for FrameCaptionButton::Animate</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2822101'>[fuchsia] Create a dedicated debugger_fuchsia.cc.</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2825631'>[PaymentRequest] Remove dead code</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2801573'>Convert enum to enum class for Widget::InitParams::Activatable</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2823311'>Convert enum to enum class for DialogContentType</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2820406'>Convert enum to enum class for TreeView::IncrementType</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2812667'>Convert enum to enum class for SelectionType</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2805733'>Use absl::variant in RenderFrameHostOrProxy</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2804936'>Convert enum to enum class for View::EmphasisMetric</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2801554'>Change "Reason" enum value to kConstantStyle</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-04-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2764084'>gamepad: Deduplicate common Switch mapping functions</a></td><td>Md Jobed Hossain</td></tr>
+<tr><td>2021-04-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2793202'>Change SignoutDelete enum value to kConstantStyle</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-03-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2755359'>Xbox gamepads lack mapping=="standard" despite exposing a Standard map</a></td><td>Md Jobed Hossain</td></tr>
+<tr><td>2021-03-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2793242'>Convert enum to enum class for Widget::MoveLoopResult</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-03-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2789088'>Change troy card's bin range to tight</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2021-03-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2763601'>Apply EnableForceZoom value to main frame</a></td><td>yongha78.lee</td></tr>
+<tr><td>2021-03-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2734880'>Include vendor/product ID in Gamepad.id string</a></td><td>Md Jobed Hossain</td></tr>
+<tr><td>2021-03-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2738783'>Change PackageManagerDelegate to use "sigingInfo" for API level 28+</a></td><td>Md Jobed Hossain</td></tr>
+<tr><td>2021-02-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2717617'>Media: Add exception handling in MediaPlayerBridge#setPlaybackRate</a></td><td>k.mishra</td></tr>
+<tr><td>2021-02-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2717026'>Remove the expired flag "overscroll-history-navigation"</a></td><td>Prakhar Shrivastav</td></tr>
+<tr><td>2021-02-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2693894'>Media: Add support for Playback Speed Change for MediaPlayerBridge</a></td><td>k.mishra</td></tr>
+<tr><td>2021-02-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2692089'>Use std::floor instead of std::trunc/clampTo in mouse_event</a></td><td>Prakhar Shrivastav</td></tr>
+<tr><td>2021-02-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2670466'>Remove kNetworkCountryIso from ContentSwitches</a></td><td>Prakhar Shrivastav</td></tr>
+<tr><td>2020-12-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2497353'>Move PaymentRequestMockFunctionScope to core/testing</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-12-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2588676'>Remove History.ClearBrowsingData.TimeSpentInDialog histogram</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-12-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2522794'>Remove unused data member in ContentViewRenderView class.</a></td><td>k.mishra</td></tr>
+<tr><td>2020-11-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2503910'>[css-grid] Fix up that the width of nested grid container with margin:auto is zero</a></td><td>Hyunjune Kim</td></tr>
+<tr><td>2020-11-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2547229'>Convert enum to enum class for Widget::MoveLoopEscapeBehavior</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-11-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2546387'>[TTS] Remove Translation support from ContextualSearchPolicy.java</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-11-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2543535'>Convert enum to enum class for MenuPart::Type</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-11-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2525804'>Password: Fix a bug that "Touch to fill" UI doesn't work in dark mode</a></td><td>Jinho Bang</td></tr>
+<tr><td>2020-11-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2519633'>MediaSession: Fix a crash when calling seekTo(0) on debug build</a></td><td>Jinho Bang</td></tr>
+<tr><td>2020-11-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2519535'>MediaSession: Fix a crash when calling seek(0) on debug build</a></td><td>Jinho Bang</td></tr>
+<tr><td>2020-10-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2494296'>Fix force-dark-mode not working on first time page loading.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-10-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2482562'>Add functionality to apply dark mode in GpuImageDecodeCache.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-10-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2497733'>Convert enum to enum class for FocusManager::Direction</a></td><td>Hwanseung Lee</td></tr>
+<tr><td>2020-10-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2467817'>Pass dark mode bit from PaintFlags to DrawImage.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-10-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2483948'>Rename ServiceWorkerPaymentApp::OnPaymentAppInvoked</a></td><td>Dongjun Kim</td></tr>
+<tr><td>2020-10-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2467741'>Pass DarkModeRasterFilter to GpuImageDecodeCache.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-10-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2423673'>Reset PageScaleConstraints after Finish Printing</a></td><td>Md. Hasanur Rashid</td></tr>
+<tr><td>2020-10-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2465886'>Make DarkModeFilter image operations thread-safe.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-10-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2452091'>Plumb DarkModeFilter to cc.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-10-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2472677'>Modify dark_mode watchlist.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2418595'>Remove expired chrome://flags entry for arc-usb-storage-ui.</a></td><td>Zhuoyu Qian</td></tr>
+<tr><td>2020-10-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2432151'>Revert "Fix that mask containing image with clip-path can not apply to client"</a></td><td>Hyunjune</td></tr>
+<tr><td>2020-10-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2445890'>Add raster side dark mode switch and initial functionality.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2449829'>Fix regression in dark mode filter creation.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-10-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2432151'>Fix that mask containing image with clip-path can not apply to client</a></td><td>Hyunjune</td></tr>
+<tr><td>2020-10-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2390588'>Decouple dark mode settings from blink settings.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-09-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2434023'>Add dark-mode-default virtual tests for images.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-09-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2434191'>Correct dark-mode-images-grayscale virtual tests.</a></td><td>Prashant Nevase</td></tr>
+<tr><td>2020-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2400547'>Use WeakPtr instead of raw pointers in //components/payments</a></td><td>DongJun Kim</td></tr>
+<tr><td>2020-09-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2428297'>Defer dark mode result caching for bitmap image.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-09-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2389862'>Replace SkRect by SkIRect in dark mode module.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-09-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2382990'>Make DarkModeImageClassifier apis to work with SkPixmap.</a></td><td>Prashant Nevase</td></tr>
 <tr><td>2020-09-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2368660'>Refactoring RespondWithCallback class</a></td><td>DongJun Kim</td></tr>
