--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2021-06-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2929545'>[Payments] Remove duplicated code</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2021-05-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2598083'>DevicePosture: Implement IDL for DevicePosture</a></td><td>baul.eun</td></tr>
 <tr><td>2021-05-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2882604'>Rename content/browser/fileapi to file_system in README.md</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2021-04-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2841788'>Remove unnecessary constructor of CreditCard</a></td><td>Hwanseung Lee</td></tr>
