--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2021-07-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3002512'>GCC: Fix initialization for NoDestructor&lt;std::vector&lt;T&gt;&gt;</a></td><td>Viatcheslav Ostapenko</td></tr>
+<tr><td>2021-07-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3008855'>Add MediaTek chipset mt8768 to allowed list for VP8 decoder</a></td><td>k.mishra</td></tr>
+<tr><td>2021-07-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2987339'>[XR] Report device features from runtime.</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2021-06-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2929545'>[Payments] Remove duplicated code</a></td><td>Hwanseung Lee</td></tr>
 <tr><td>2021-05-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2598083'>DevicePosture: Implement IDL for DevicePosture</a></td><td>baul.eun</td></tr>
 <tr><td>2021-05-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/2882604'>Rename content/browser/fileapi to file_system in README.md</a></td><td>Zhuoyu Qian</td></tr>
