--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2021-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3084103'>Use a reference of CookieSettings instead of a pointer.</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2021-07-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3030901'>Remove the declaration of ShouldShowAlternateDinoPage().</a></td><td>Zhuoyu Qian</td></tr>
 <tr><td>2021-07-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3002512'>GCC: Fix initialization for NoDestructor&lt;std::vector&lt;T&gt;&gt;</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2021-07-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3008855'>Add MediaTek chipset mt8768 to allowed list for VP8 decoder</a></td><td>k.mishra</td></tr>
