--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-07-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3750454'>[Stylus Handwriting] Add second set of stylus writing aidl APIs</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-07-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3747615'>[Stylus Handwriting] Add first set of stylus writing aidl APIs</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-07-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3695719'>[Stylus Handwriting] Implement Android logic for stylus recognition</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-07-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3726467'>Revert refreshrate to default if browser lost focus</a></td><td>sangheon77.kim</td></tr>
 <tr><td>2022-07-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3735267'>Set root window to default refresh rate when returning to SurfaceControl</a></td><td>sangheon77.kim</td></tr>
 <tr><td>2022-07-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3697960'>Call OnBeginFrameSourcePausedChanged when observer is removed</a></td><td>sangheon77.kim</td></tr>
