--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,15 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3791265'>[Stylus Handwriting] Unbind service when it is disconnected</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3780978'>[Stylus Handwriting] Add release fingerprint for writing service</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-07-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3735422'>[Stylus Handwriting] Implement stylus writing gesture handling</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-07-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3780760'>Add empty check while getting range for character index</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-07-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3781831'>[Stylus Handwriting] Allow soft keyboard during Android stylus writing</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-07-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3772713'>[Stylus Handwriting] Use web preferences to update service enabled status</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-07-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3775361'>[Stylus Handwriting] Enable Stylus Handwriting feature</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-07-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3755022'>[Stylus Handwriting] Add checking direct writing pkg fingerprint</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3760059'>Don&#x27;t reset CompositorSurfaceManager if surface has been created</a></td><td>sangheon77.kim</td></tr>
 <tr><td>2022-07-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3750454'>[Stylus Handwriting] Add second set of stylus writing aidl APIs</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-07-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3747615'>[Stylus Handwriting] Add first set of stylus writing aidl APIs</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-07-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3695719'>[Stylus Handwriting] Implement Android logic for stylus recognition</a></td><td>Mahesh Machavolu</td></tr>
