--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3801697'>[Stylus Handwriting] Request view focus when stylus writing is detected</a></td><td>Mahesh Machavolu</td></tr>
+<tr><td>2022-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3793671'>[Stylus Handwriting] Restrict writing area to URL bar bounds</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3791265'>[Stylus Handwriting] Unbind service when it is disconnected</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-07-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3780978'>[Stylus Handwriting] Add release fingerprint for writing service</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-07-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3735422'>[Stylus Handwriting] Implement stylus writing gesture handling</a></td><td>Mahesh Machavolu</td></tr>
