--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-08-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3788015'>[Stylus Handwriting] Show Stylus writing hover icon</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3801697'>[Stylus Handwriting] Request view focus when stylus writing is detected</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3793671'>[Stylus Handwriting] Restrict writing area to URL bar bounds</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3791265'>[Stylus Handwriting] Unbind service when it is disconnected</a></td><td>Mahesh Machavolu</td></tr>
