--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3820554'>Fix build issue of missing vtable.</a></td><td>baul.eun</td></tr>
 <tr><td>2022-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3817672'>[Stylus Handwriting] Do not allow writing below Android S (android 12)</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-08-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3788015'>Reland &quot;[Stylus Handwriting] Show Stylus writing hover icon&quot;</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-08-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3788015'>[Stylus Handwriting] Show Stylus writing hover icon</a></td><td>Mahesh Machavolu</td></tr>
