--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-08-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3849623'>Remove duplicate code</a></td><td>Jagdish Chourasia</td></tr>
 <tr><td>2022-08-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3838791'>Add JUnit tests for Direct writing Service callback input messages</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-08-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3833620'>Add java unit tests for Direct writing classes</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3820554'>Fix build issue of missing vtable.</a></td><td>baul.eun</td></tr>
