--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-08-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3715820'>webauthn: Update abort handling to take an abort reason</a></td><td>Amos Lim</td></tr>
+<tr><td>2022-08-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3858925'>Cleanup old secure-payment-confirmation expected.txt files</a></td><td>Amos Lim</td></tr>
 <tr><td>2022-08-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3845179'>Add JUnit tests for Direct Writing gesture message data</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-08-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3849623'>Remove duplicate code</a></td><td>Jagdish Chourasia</td></tr>
 <tr><td>2022-08-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3838791'>Add JUnit tests for Direct writing Service callback input messages</a></td><td>Mahesh Machavolu</td></tr>
