--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-09-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3873453'>Fix NPE during stylus handwriting</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-09-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3865359'>Remove model block list of SurfaceControl from S_V2</a></td><td>sangheon77.kim</td></tr>
 <tr><td>2022-08-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3715820'>Reland &quot;webauthn: Update abort handling to take an abort reason&quot;</a></td><td>Amos Lim</td></tr>
 <tr><td>2022-08-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3709439'>webauthn: Drop PublicKeyCredentialEntity.icon</a></td><td>Amos Lim</td></tr>
