--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3878455'>UpdateViewportContainerSize() on every commit in pending tree</a></td><td>sangheon77.kim</td></tr>
+<tr><td>2022-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3899697'>Remove pre-JB-MR1 unnecessary code</a></td><td>Jagdish Chourasia</td></tr>
 <tr><td>2022-09-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3868879'>webauthn: Refactor for_internal_webauthn behind content/public/browser</a></td><td>Amos Lim</td></tr>
 <tr><td>2022-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3891564'>[GURL] Migrate referrer to use GURL</a></td><td>Jitesh Pareek</td></tr>
 <tr><td>2022-09-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3878376'>Add Junit tests for stylus writing code in WebContentsImpl</a></td><td>Mahesh Machavolu</td></tr>
