--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-10-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3929886'>[Code Health] Clean up some pre-Nougat code in media/ code</a></td><td>Jagdish Chourasia</td></tr>
 <tr><td>2022-09-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3912922'>[Device Posture] Remove folded-over status</a></td><td>Dongwoo Im</td></tr>
 <tr><td>2022-09-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3911148'>[Code Health] Clean up some pre-Nougat code in media/ code</a></td><td>Jagdish Chourasia</td></tr>
 <tr><td>2022-09-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3907346'>Remove disable_webauthn setting on pre-android N</a></td><td>Jagdish Chourasia</td></tr>
