--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3960251'>[Code Health] Clean up some pre-Nougat code in ui/permissions</a></td><td>Prakhar Shrivastav</td></tr>
+<tr><td>2022-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3960615'>Replace RefCountedString::TakeString in favor of std::move()</a></td><td>Prakhar Shrivastav</td></tr>
 <tr><td>2022-10-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3955892'>[Code Health] Clean up some pre-Nougat code in download</a></td><td>Prakhar Shrivastav</td></tr>
 <tr><td>2022-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3945533'>[Code Health] Clean up some pre-Nougat code in media/ code</a></td><td>Jagdish Chourasia</td></tr>
 <tr><td>2022-10-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3937706'>Don&#x27;t reset CompositorSurfaceManager once a surface is created</a></td><td>sangheon77.kim</td></tr>
