--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-10-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3971240'>autofill: Use strong aliases for autoselect_first_suggestion</a></td><td>Amos Lim</td></tr>
+<tr><td>2022-10-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3977674'>Remove unused field |mLastDestroyedSurface|</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2022-10-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3970959'>[media] Remove unused code</a></td><td>Jagdish Chourasia</td></tr>
 <tr><td>2022-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3960251'>[Code Health] Clean up some pre-Nougat code in ui/permissions</a></td><td>Prakhar Shrivastav</td></tr>
 <tr><td>2022-10-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3960615'>Replace RefCountedString::TakeString in favor of std::move()</a></td><td>Prakhar Shrivastav</td></tr>
