--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4023149'>personalization: Remove global ReportBadMessage().</a></td><td>Aquibuzzaman Md. Sayem</td></tr>
 <tr><td>2022-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4021896'>ServiceWorker: Remove global ReportBadMessage().</a></td><td>Amit Paul</td></tr>
 <tr><td>2022-11-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4021884'>Shared Storage:: Remove global ReportBadMessage(), GetMessageCallback()</a></td><td>Abul Hasan Md Osama</td></tr>
 <tr><td>2022-11-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3878370'>Replace usage of |downloads_| in favor of |downloads_by_guid_|</a></td><td>Shubham Gupta</td></tr>
