--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4029788'>Vr:: Remove global ReportBadMessage(), GetMessageCallback()</a></td><td>Md. Sadiqul Amin</td></tr>
 <tr><td>2022-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4027705'>BluetoothSerialPort: Remove global ReportBadMessage().</a></td><td>Arup Barua</td></tr>
 <tr><td>2022-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4022953'>Personalization App:: Remove global ReportBadMessage(), GetMessageCallback()</a></td><td>Md. Sadiqul Amin</td></tr>
 <tr><td>2022-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4023149'>personalization: Remove global ReportBadMessage().</a></td><td>Aquibuzzaman Md. Sayem</td></tr>
