--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-11-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3971458'>[Code Health] Clean up some pre-Nougat code in media/ code</a></td><td>Jagdish Chourasia</td></tr>
 <tr><td>2022-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4022243'>Background Fetch: Remove global ReportBadMessage().</a></td><td>Amit Paul</td></tr>
 <tr><td>2022-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4033348'>ServiceWorker: Remove global ReportBadMessage().</a></td><td>Choudhury M. Shamsujjoha</td></tr>
 <tr><td>2022-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4029788'>Vr:: Remove global ReportBadMessage(), GetMessageCallback()</a></td><td>Md. Sadiqul Amin</td></tr>
