--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3878370'>Reland &quot;Replace usage of |downloads_| in favor of |downloads_by_guid_|&quot;</a></td><td>Shubham Gupta</td></tr>
+<tr><td>2022-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4066027'>Make shorthand serializer for &quot;columns&quot;</a></td><td>Hyomin Kim</td></tr>
 <tr><td>2022-12-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4067243'>[Stylus Handwriting] Don&#x27;t unregister DW callback when window loses focus</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4049303'>[Code Health] Clean up some pre-Nougat code in BitmapUtil</a></td><td>Prakhar Shrivastav</td></tr>
 <tr><td>2022-11-24</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4044848'>[Code Health] Clean up some pre-Nougat code</a></td><td>Jagdish Chourasia</td></tr>
