--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2022-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4074994'>Call ASurfaceTransaction_apply() to avoid surface leak</a></td><td>sangheon77.kim</td></tr>
 <tr><td>2022-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4085362'>Adjust stylus event to allow handwriting in nearby inputs</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3878370'>Reland &quot;Replace usage of |downloads_| in favor of |downloads_by_guid_|&quot;</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2022-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4066027'>Make shorthand serializer for &quot;columns&quot;</a></td><td>Hyomin Kim</td></tr>
