--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-01-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4191007'>[FullScreen] Fade-out animation is not started</a></td><td>Yash Vinayak</td></tr>
+<tr><td>2023-01-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3990409'>FileApi: Remove global ReportBadMessage(), GetMessageCallback()</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-01-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4127005'>PersonalizationApp: Remove global ReportBadMessage(),</a></td><td>Yash Vinayak</td></tr>
 <tr><td>2022-12-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4111260'>[Stylus Handwriting] Implement split-merge (|) gesture</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2022-12-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4074994'>Call ASurfaceTransaction_apply() to avoid surface leak</a></td><td>sangheon77.kim</td></tr>
