--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-02-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4244797'>Allow stop recognition to be called before writing is started</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2023-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4108691'>Fix the column rule to be as tall as the column box</a></td><td>Hyomin Kim</td></tr>
 <tr><td>2023-02-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4232399'>Finish Ime composition before committing stylus writing recognized text</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2023-02-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4113767'>Show Handwriting hover icon when pointer can be adjusted to start writing</a></td><td>Mahesh Machavolu</td></tr>
