--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-03-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4328807'>Remove force override for frame visibility check in find_in_page</a></td><td>Vishal Lingam</td></tr>
 <tr><td>2023-02-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4271025'>Show Android handwriting hover icon over writable inputs</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2023-02-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4244797'>Allow stop recognition to be called before writing is started</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2023-02-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4108691'>Fix the column rule to be as tall as the column box</a></td><td>Hyomin Kim</td></tr>
