--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-05-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4499859'>Reverse enable_vr and enable_arcore dependency</a></td><td>Viatcheslav Ostapenko</td></tr>
+<tr><td>2023-05-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4493129'>Decouple android vr from gvr services</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2023-04-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4422017'>Update Direct writing service callback aidl and implement new methods</a></td><td>Mahesh Machavolu</td></tr>
 <tr><td>2023-03-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4383129'>Fix typo in description</a></td><td>Hyomin Kim</td></tr>
 <tr><td>2023-03-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4109653'>Fix typo in description</a></td><td>Hyomin Kim</td></tr>
