--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-05-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4415296'>Disable SelectAll when editable contains only empty string</a></td><td>syed.wajid</td></tr>
 <tr><td>2023-05-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4508307'>Replace VrShell sources with stub in vr module.</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2023-05-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4499859'>Reverse enable_vr and enable_arcore dependency</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2023-05-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4493129'>Decouple android vr from gvr services</a></td><td>Viatcheslav Ostapenko</td></tr>
