--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-06-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4569961'>Correct frame selection for stylus handwriting in input fields within iframes</a></td><td>syed.wajid</td></tr>
+<tr><td>2023-06-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4576852'>Remove dpi conversion of Clip Rect during Smart clip extraction</a></td><td>syed.wajid</td></tr>
+<tr><td>2023-06-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4515320'>ForceDark: Fix incorrect ratio calculation</a></td><td>vishal.reddy</td></tr>
 <tr><td>2023-06-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4520620'>Rename Gvr specific test files.</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2023-05-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4546749'>Make shorthand serializer for &quot;column-rule&quot;</a></td><td>Hyomin Kim</td></tr>
 <tr><td>2023-05-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4415296'>Disable SelectAll when editable contains only empty string</a></td><td>syed.wajid</td></tr>
