--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-06-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4607741'>Remove an existing GPU channel before creating a new GPU channel</a></td><td>ilwoo905.lee</td></tr>
+<tr><td>2023-06-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4617810'>Use CHECK instead of DCHECK for insertion failure.</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-06-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4569961'>Correct frame selection for stylus handwriting in input fields within iframes</a></td><td>syed.wajid</td></tr>
 <tr><td>2023-06-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4576852'>Remove dpi conversion of Clip Rect during Smart clip extraction</a></td><td>syed.wajid</td></tr>
 <tr><td>2023-06-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4515320'>ForceDark: Fix incorrect ratio calculation</a></td><td>vishal.reddy</td></tr>
