--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-06-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4624019'>Replace DOMString with CSSOMString for FontFace properties</a></td><td>Amos Lim</td></tr>
 <tr><td>2023-06-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4617809'>Remove remainings of offline_pages/prefetch code.</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-06-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4607741'>Remove an existing GPU channel before creating a new GPU channel</a></td><td>ilwoo905.lee</td></tr>
 <tr><td>2023-06-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4617810'>Use CHECK instead of DCHECK for insertion failure.</a></td><td>Shubham Gupta</td></tr>
