--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4623479'>cc: Update function doc for UIResourceLayer::SetBitmap</a></td><td>Shubham Gupta</td></tr>
+<tr><td>2023-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4626416'>Update frame_data using parent_routing_id.</a></td><td>Ritesh Saharan</td></tr>
+<tr><td>2023-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4626603'>Remove register-property-syntax-parsing.html.ini</a></td><td>Euisang Lim</td></tr>
 <tr><td>2023-06-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4624019'>Replace DOMString with CSSOMString for FontFace properties</a></td><td>Amos Lim</td></tr>
 <tr><td>2023-06-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4617809'>Remove remainings of offline_pages/prefetch code.</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-06-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4607741'>Remove an existing GPU channel before creating a new GPU channel</a></td><td>ilwoo905.lee</td></tr>
