--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-06-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4617691'>Set StylusHandwritingImeCallback when the web contents is updated</a></td><td>syed.wajid</td></tr>
 <tr><td>2023-06-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4629330'>Allow empty parentheses in @supports evaluating to false</a></td><td>Amos Lim</td></tr>
 <tr><td>2023-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4623479'>cc: Update function doc for UIResourceLayer::SetBitmap</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-06-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4626416'>Update frame_data using parent_routing_id.</a></td><td>Ritesh Saharan</td></tr>
