--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-06-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4639441'>Stop calling redraw on WillBeginImplFrame() after Draw</a></td><td>Sunghyeok Kang</td></tr>
 <tr><td>2023-06-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4505177'>Implement VR tests for cardboard vr provider.</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2023-06-27</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4617691'>Set StylusHandwritingImeCallback when the web contents is updated</a></td><td>syed.wajid</td></tr>
 <tr><td>2023-06-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4629330'>Allow empty parentheses in @supports evaluating to false</a></td><td>Amos Lim</td></tr>
